--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@svgr/webpack": "^5.5.0",
+    "animate.css": "^4.1.1",
     "antd": "^4.16.11",
     "axios": "^0.21.1",
     "date-fns": "^2.25.0",
