feat(expirience): get exp from back with fetch

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-fetch": "^2.6.1",
     "pino": "^6.13.0",
     "pino-pretty": "^7.0.0",
+    "prettier": "^2.7.1",
     "prop-types": "^15.7.2",
     "querystring": "^0.2.1",
     "react": "17.x",
